Add auth flow, rebrand to Notely

--- a/src/app/colors.scss
+++ b/src/app/colors.scss
@@ -1,8 +1,86 @@
-$background-color-light: #fffeff;
+$color-light: #012;
+$color-dark: #fffeff;
+
+$background-color-light: #e6e6e9;
 $background-color-dark: #1b1b1f;
 
-$section-background-color-light: #f0f0f0;
-$section-background-color-dark: #2b2b2b;
+$nav-button-background-color-light: #fefdff;
+$nav-button-background-color-dark: #323236;
 
-$accent-color-light: #677db7;
-$accent-color-dark: #8294c4;
+$nav-button-color-light: #012;
+$nav-button-color-dark: #fffeff;
+
+$nav-button-hover-color-light: #012;
+$nav-button-hover-color-dark: #fffeff;
+
+$nav-button-hover-background-color-light: #ebebf3;
+$nav-button-hover-background-color-dark: #45454b;
+
+$nav-button-accent-color-light: #ffffff;
+$nav-button-accent-color-dark: #fffeff;
+
+$nav-button-accent-background-color-light: #7272d6;
+$nav-button-accent-background-color-dark: #6262c4;
+
+$nav-button-accent-hover-color-light: #ffffff;
+$nav-button-accent-hover-color-dark: #ffffff;
+
+$nav-button-accent-hover-background-color-light: #4a4ae0;
+$nav-button-accent-hover-background-color-dark: #7070d8;
+
+$nav-button-accent-border-color-light: #43438b;
+$nav-button-accent-border-color-dark: #43438b;
+
+$boxed-section-background-color-light: #fefdff;
+$boxed-section-background-color-dark: #323236;
+
+$input-background-color-light: #fefdff;
+$input-background-color-dark: #222225;
+
+$input-color-light: #012;
+$input-color-dark: #c3c3c7;
+
+$input-border-color-light: #a9a9b7;
+$input-border-color-dark: #a9a9b7;
+
+$input-border-focus-color-light: #ccc6ff;
+$input-border-focus-color-dark: #ccc6ff;
+
+$button-primary-color-light: #deecfa;
+$button-primary-color-dark: #fffeff;
+
+$button-primary-background-color-light: #6464dd;
+$button-primary-background-color-dark: #4747ac;
+
+$button-primary-hover-color-light: #ffffff;
+$button-primary-hover-color-dark: #ffffff;
+
+$button-primary-hover-background-color-light: #4a4ae0;
+$button-primary-hover-background-color-dark: #4e4ec7;
+
+$button-primary-border-color-light: #43438b;
+$button-primary-border-color-dark: #dadaff;
+
+$button-secondary-color-light: #012;
+$button-secondary-color-dark: #fffeff;
+
+$button-secondary-background-color-light: #fefdff;
+$button-secondary-background-color-dark: #323236;
+
+$button-secondary-hover-color-light: #012;
+$button-secondary-hover-color-dark: #fffeff;
+
+$button-secondary-hover-background-color-light: #ebebf3;
+$button-secondary-hover-background-color-dark: #45454b;
+
+$button-secondary-border-color-light: #a9a9b7;
+$button-secondary-border-color-dark: #a9a9b7;
+
+$accent-color-light: #1d4dd3;
+$accent-color-dark: #87a7ff;
+
+$landing-glow-color-light: #babfff;
+$landing-glow-color-dark: #6167b6bd;
+
+$main-content-background-color-light: #ffffff;
+$main-content-background-color-dark: #252527;
