--- a/src/app/app/account-menu.module.scss
+++ b/src/app/app/account-menu.module.scss
@@ -1,39 +1,61 @@
-.nav-bar {
+.account-menu {
+  position: absolute;
+  top: calc(100% + 4px);
+  right: 0;
   width: auto;
-  height: 2.5rem;
-  margin: 0.375rem 0.5rem;
-  padding: 0.125rem 0.5rem;
+  background-color: red;
+  padding: 0.25rem 0.125rem;
   background-color: var(--nav-background-color);
   border: 1px #a9a9b7 solid;
   border-radius: 4px;
+  z-index: 1000;
+  transform: translateX(1px);
 
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  overflow: hidden;
-
-  ul {
+  .menu-items {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
     list-style: none;
     margin: 0;
     padding: 0;
+
+    .menu-divider {
+      background-color: #a9a9b7;
+      height: 1px;
+      width: calc(100% - 0.75rem);
+      margin-top: 0.3rem;
+      margin-bottom: 0.3rem;
+      opacity: 0.5;
+    }
+
     li {
-      margin-left: 0.5rem;
+      margin: 0 0.125rem;
+      width: calc(100% - 0.25rem);
+      margin-bottom: 0.1rem;
+      &:last-of-type {
+        margin-bottom: 0;
+      }
+      button,
       a {
-        font-size: 0.9rem;
+        display: inline-block;
+        font-family: inherit;
         text-decoration: none;
-        padding: 0.3rem 0.5rem;
+        padding: 0.375rem;
+        padding-right: 1.5rem;
+        font-size: 0.9rem;
+        width: 100%;
         color: var(--nav-button-color);
         background-color: var(--nav-button-background-color);
         border-radius: 4px;
+        border: none;
         transition: all 0.125s ease-out;
         &:hover {
           color: var(--nav-button-hover-color);
           background-color: var(--nav-button-hover-background-color);
         }
       }
+      button.accent,
       a.accent {
         color: var(--nav-button-accent-color);
         background-color: var(--nav-button-accent-background-color);
