--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -5,37 +5,49 @@
     margin-top: 0;
   }
   width: 100%;
-  background-color: red;
-}
-
-.boxed-section {
-  width: auto;
-  max-width: calc(100% - 2rem);
-  padding: 0.5rem;
-  margin: 0.375rem 0.5rem;
-  background-color: var(--boxed-section-background-color);
-  border: 1px #a9a9b7 solid;
-  border-radius: 4px;
-
-  * {
-    margin: 0;
-  }
-
-  h1,
-  h2 {
-    font-weight: bold;
-  }
-
-  h1 {
-    font-size: 1.2rem;
-  }
-
-  h2 {
-    font-size: 1rem;
-  }
 }
 
 .landing-section {
   width: 100%;
-  height: 2000px;
+  .landing-items {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: max(10rem, 30dvh) 0;
+    text-align: center;
+    user-select: none;
+    h1 {
+      font-size: 2rem;
+      margin: 0.5rem 0;
+      pointer-events: none;
+
+      strong {
+        display: inline-block;
+        color: var(--accent-color);
+
+        height: 4px;
+        border-radius: 10px;
+        box-shadow: 0 calc(2rem + 4px) 0 0 var(--accent-color);
+      }
+    }
+    &::after {
+      content: "";
+      position: absolute;
+      display: block;
+      float: left;
+      width: 24rem;
+      top: -6dvh;
+      bottom: -6dvh;
+      // radial
+      background: radial-gradient(
+        circle,
+        var(--landing-glow-color) 0%,
+        var(--background-color) 100%
+      );
+      filter: blur(60px);
+      opacity: 1;
+      z-index: -1;
+    }
+  }
 }
